--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 </div>
                 <div class="footericonbox">
                     <img src="./images/github-white.svg" alt="" class="h-10">
-                    <p class="footericontext">+91 92767 03503</p>
+                    <p class="footericontext">divyeshbhuva92</p>
                 </div>
                 <div class="footericonbox">
                     <img src="./images/LOCATION-ROUND-white.svg" alt="" class="h-10">
